動画アップロード機能追加

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,7 +1,13 @@
 <div class="col-sm-12 col-lg-4 mb-3">
 	<div id="board-id-<%= board.id %>">
 		<div class="card">
-			<%= image_tag board.board_image.url, class: 'card-img-top', size: '300*200' %>
+			<% if board.board_image.present? %>
+				<%= image_tag board.board_image.url, class: 'card-img-top', size: '300*200' %>
+			<% elsif board.board_video.present? %>
+				<%= video_tag board.board_video.url, class: 'card-img-top', autoplay: false, muted: false, controls: true , size: '300*200' %>
+			<% else %>
+				<%= image_tag 'board_placeholder.png', class: 'card-img-top', size: '300*200' %>
+			<% end %>
 			<div class="card-body">
 				<div class="d-flex">
 					<h4 class="card-title">
