--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -10,13 +10,13 @@
   </div>
   <div class="form-group">
     <%= f.label :board_image %>
-    <%= f.file_field :board_image, class: 'form-control mb-3', accept: 'image/*', onchange: 'previewImage(preview)' %>
+    <% if @board.board_image.present? %>
+      <%= image_tag @board.board_image.url, class: 'card-img-top', id: :img_prev %>
+    <% else %>
+      <%= image_tag 'board_placeholder.png', class: 'card-img-top', id: :img_prev %>
+    <% end %>
+    <%= f.file_field :board_image, class: 'form-control mb-3', accept: 'image/jpg, image/jpeg, image/gif, image/png, video/*', onchange: 'previewImage(preview)' %>
     <%= f.hidden_field :board_image_cache %>
-  </div>
-  <div class="form-group">
-    <%= f.label :board_video %>
-    <%= f.file_field :board_video, class: 'form-control mb-3', accept: 'video/*', onchange: 'previewImage(preview)' %>
-    <%= f.hidden_field :board_video_cache %>
   </div>
 
   <%= f.submit class: 'btn btn-primary' %>
